fix overflow

--- a/src/style.less
+++ b/src/style.less
@@ -426,6 +426,7 @@
 .hoverProfile .profileDetails {
   margin: 24px 0;
   width: 100%;
+  overflow: hidden;
 }
 
 .hoverProfile .profileValueKey {
